--- a/hugo.yaml
+++ b/hugo.yaml
@@ -62,7 +62,7 @@ languages:
       homeInfoParams:
         Title: "Moi, c'est Pablo !"
         Content: >
-          - Étudiant en informatique et ingénieur logiciel français.
+          - Ingénieur logiciel français.
 
           - 
 
@@ -114,7 +114,7 @@ params:
   homeInfoParams:
     Title: "Hi, I'm Pablo!"
     Content: >
-      - Computer Science student and Software Engineer based in France.
+      - Software Engineer based in France.
 
       - 
 
@@ -130,9 +130,6 @@ params:
     - name: LinkedIn
       title: Contact me on LinkedIn
       url: "https://linkedin.com/in/pablolaviron"
-    - name: Email
-      title: Mail me
-      url: "mailto:pablo.laviron@gmail.com"
 
   # editPost:
   #   URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
